<resources>
    <!--fragments name -->
    <string name="app_name">DumpstApp</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="abaut_us_fragment">About Us</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_componens_fragment">View Comments</string>
    <string name="view_profile_fragment">ViewProfile</string>

    <!--dialog name -->
    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>

    <!--firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="sign_successs">Authentication success</string>

    <!--firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>

    <!--Photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!--Intent Extas -->
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>

    <!--Bundle arg names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!--Activity names -->
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>

    <!--strings -->
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="private_information">PRIVATE INFORMATION</string>
    <string name="change_photo">Change Photo</string>
    <string name="text_hint_username">UserName</string>
    <string name="text_hint_display_name">Display Name</string>
    <string name="text_hint_website">webSite</string>
    <string name="text_hint_description">description</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_phone_number">Phone Number</string>
    <string name="text_hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="text_hint_no_account_yet_create_one">No Account yet? Create one</string>
    <string name="please_wait">Please Wait...</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="account_settings">Account Settings</string>
</resources>
