<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_photo"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:id="@+id/changeProfilePhoto"
                android:layout_below="@+id/profile_photo"
                android:layout_centerHorizontal="true"
                android:textColor="@color/blue"
                android:textSize="16sp"/>

            <!-- User name sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/changeProfilePhoto"
                android:layout_marginTop="80dp"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout1">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_username"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userName"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/text_hint_username"/>
            </RelativeLayout>

            <!-- Dispaly name sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout1"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout2">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_display"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/display_name"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/text_hint_display_name"/>
            </RelativeLayout>

            <!-- webSite sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout2"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout3">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_web"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/webSite"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/text_hint_website"/>
            </RelativeLayout>

            <!-- description sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout3"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/relLayout4">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/text_hint_description"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/private_information"
                android:layout_below="@id/relLayout4"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:background="@drawable/grey_border_bottom"
                android:id="@+id/textPrivateInfo"/>

            <!-- email sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textPrivateInfo"
                android:background="@drawable/grey_border_bottom"
                android:layout_marginTop="15dp"
                android:id="@+id/relLayout5">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/text_hint_email"/>
            </RelativeLayout>

            <!-- email sections -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relLayout5"
                android:background="@drawable/grey_border_bottom"
                android:layout_marginTop="15dp"
                android:id="@+id/relLayout6">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_phone"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneNumber"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/text_hint_phone_number"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</merge>